--- a/src/main/resources/templates/auth/admin/admin-list-user.html
+++ b/src/main/resources/templates/auth/admin/admin-list-user.html
@@ -34,6 +34,14 @@
                     <td><span th:text="${user.cpf}"> Cpf </span></td>
                     <td><span th:text="${#dates.format(user.birthday, 'dd/MM/yyyy')}"> Nascimento </span></td>
                     <td><span th:text="${user.email}"> E-mail </span></td>
+                    <td>
+                        <a class="btn btn-outline-danger btn-sm"
+                           th:href="@{/user/admin/delete/{id}(id=${user.id})}"
+                           th:data-confirm-delete="|Você gostaria de apagar ${user.name}?|"
+                           onclick="if (!confirm(this.getAttribute('data-confirm-delete'))) return false">
+                            Apagar
+                        </a>
+                    </td>
                 </tr>
                 </tbody>
             </table>
