--- a/src/main/resources/templates/auth/admin/admin-list-user.html
+++ b/src/main/resources/templates/auth/admin/admin-list-user.html
@@ -42,6 +42,11 @@
                             Apagar
                         </a>
                     </td>
+                    <td>
+                        <a class="btn btn-outline-primary btn-sm"
+                           th:href="@{/user/edit/{id}(id=${user.id})}">
+                            Editar</a>
+                    </td>
                 </tr>
                 </tbody>
             </table>
