--- a/src/main/resources/templates/public-create-user.html
+++ b/src/main/resources/templates/public-create-user.html
@@ -77,6 +77,7 @@
           </div>
           <div class="col-sm-5">
             <span class="message" th:if="${#fields.hasErrors('login')}" th:errors="*{login}"></span>
+            <span class="message" th:if="${loginMessage}" th:text="${loginMessage}"></span>
           </div>
         </div>
 
